@@ -4,7 +4,7 @@ Donate link: mailto:hola@albertodevera.es
 Tags: woocommerce, brands, brand taxonomy, product brands, woocommerce manufacturer, woocommerce supplier, e-commerce
 Requires at least: 4.4
 Tested up to: 4.9
-Stable tag: 1.6.3
+Stable tag: 1.6.4
 License: GPL3
 License URI: http://www.gnu.org/licenses/gpl-3.0.en.html
 
@@ -80,6 +80,8 @@ Go to `WooCommerce/Settings/` and click on `Brands` tab
 == Changelog ==
 = 1.6.4 =
 * Feature: Visual editor with shortcode support added to brand description
+* Feature: Hide empty brands in brand widgets
+* Minor fixes and tweaks
 = 1.6.3 =
 * Requirements: No more longer support for very old php versions (5.4 minimum)
 * Fix: Product carousels shortcode display fixes
