@@ -1,6 +1,8 @@
 == Changelog ==
 = 1.6.4 =
 * Feature: Visual editor with shortcode support added to brand description
+* Feature: Hide empty brands in brand widgets
+* Minor fixes and tweaks
 = 1.6.3 =
 * Requirements: No more longer support for very old php versions (5.4 minimum)
 * Fix: Product carousels shortcode display fixes
